--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,22 +18,22 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^0.5.10
-  provider: ^4.3.2+1
-  sqflite: ^1.3.1+1
-  flutter_bloc: ^6.0.3
-  google_fonts: ^1.1.1
-  path: ^1.7.0
-  logger: ^1.0.0
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
+  sqflite: ^2.2.0+2
+  flutter_bloc: ^8.1.1
+  google_fonts: ^3.0.1
+  path: ^1.8.2
+  logger: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
